--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.379.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
